Add listing of scenarios and styling to the available section and a working tag filter

--- a/app/sass/components/modules/select.scss
+++ b/app/sass/components/modules/select.scss
@@ -43,6 +43,7 @@
         width: 100%;
         padding: $filter-button-padding 0;
         border: $filter-list-border;
+        z-index: 2;
 
         ul {
             max-height: $filter-list-max-height;
