--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -60,25 +60,52 @@ $header-font-weight:              normal;
 // section colors
 $section-header-bg-color:         lighten($gray, 10%);
 $section-header-color:            darken($dark-gray, 5%);
+$section-list-icon-color:         lighten($dark-gray, 5%);
 
 // section formatting
 $section-header-font-size:        modular-scale($base-font-size, 1, $perfect-fifth);
-$section-list-side-padding:       .6em;
+$section-header-icon-top:         .5em;
+$section-header-icon-size:        modular-scale($base-font-size, 1, $octave);
+$section-list-side-padding:       1em;
+$section-list-icon-left:          $header-height / $section-header-font-size / 5 * 1em;
+$section-list-icon-text-pad:      modular-scale($section-list-icon-left, 3, $major-seventh);
 
 // filter buttons
 $filter-button-padding:           .5em;
 $filter-button-border:            none;
 
-// filter select list
+// filter select list formatting and colors
 $filter-list-border-width:        .1em;
-$filter-list-border-color:        lighten($gray, 10%);
-$filter-list-border:              $filter-list-border-color $filter-list-border-width solid;
-$filter-list-color:               lighten($dark-gray, 20%);
-$filter-list-bg-color:            #fff;
-$filter-list-highlight-bg-color:  darken($filter-list-bg-color, 5%);
 $filter-list-font-size:           1.1em;
 $filter-list-button-max-width:    14em;
 $filter-list-button-min-width:    10em;
 $filter-list-button-bg-color:     $body-bg-color;
 $filter-list-button-margin:       .3em;
 $filter-list-max-height:          12em;
+$filter-list-border-color:        lighten($gray, 10%);
+$filter-list-border:              $filter-list-border-color $filter-list-border-width solid;
+$filter-list-color:               lighten($dark-gray, 20%);
+$filter-list-bg-color:            #fff;
+$filter-list-highlight-bg-color:  darken($filter-list-bg-color, 5%);
+
+// content list formatting and colors
+$content-list-item-spacing:       2px;
+$content-list-item-1-height:      modular-scale($base-font-size, 2, $golden);
+$content-list-item-1-bg-color:    lighten($section-header-bg-color, 5%);
+$content-list-item-1-font-size:   modular-scale($base-font-size, 1, $perfect-fourth);
+$content-list-item-1-icon-size:   modular-scale($base-font-size, 1, $minor-seventh);
+$content-list-item-1-icon-top:    .25em;
+$content-list-item-1-icon-left:   1.25;
+
+$content-list-item-2-height:      modular-scale($base-font-size, 2, $perfect-fifth);
+$content-list-item-2-bg-color:    lighten($section-header-bg-color, 10%);
+$content-list-bg-color:           lighten($section-header-bg-color, 20%);
+$content-list-item-2-font-size:   modular-scale($base-font-size, 1, $minor-third);
+$content-list-item-2-icon-size:   modular-scale($base-font-size, 1, $minor-seventh);
+$content-list-item-2-icon-top:    .15em;
+$content-list-item-2-icon-left:   1.75;
+
+$content-list-item-3-spacing:     1px;
+$content-list-item-3-bg-color:    lighten($section-header-bg-color, 20%);
+$content-list-3-bg-color:         $content-list-item-1-bg-color;
+$content-list-3-bottom-space:     5px;
