--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,9 +1,24 @@
 <div ng-include="'views/runner/filter.html'" include-replace></div>
 <ul class="main-content-list">
-    <li ng-repeat="book in available.storyBooks | storyBookSet:available.filterKeys.sets">
-        <div>{{ book.title }}</div>
+    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in available.storybooks | storybookSet:available.filterKeys.set | storybookTag:available.filterKeys.tag">
+        <div>
+            <i class="fa fa-bars"></i>
+            <span>{{ book.title }}</span>
+        </div>
         <ul>
-            <li ng-repeat="story in book.stories | storySet:available.filterKeys.sets">{{ story.title }}</li>
+            <li class="ic cl" ng-repeat="story in book.stories | storySet:available.filterKeys.set | storyTag:available.filterKeys.tag">
+                <div>
+                    <i class="fa fa-caret-right"></i>
+                    <span>{{ story.title }}</span>
+                </div>
+                <ul>
+                    <li class="ic cl" ng-repeat="scenario in story.scenarios">
+                        <div>
+                            <span>{{ scenario.title }}</span>
+                        </div>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </li>
 </ul>
