Add staggering animations to loading the story list and optimize the story search
- Optimizes the story search by adding a `forceReload` boolean that has to be set to true in order to fully reinitialize the story search service. If this boolean is not set, reloading is skipped and existing story data is used in case the service has already been initialized once before

--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -114,6 +114,11 @@ div.layout {
         opacity: 0;
     }
 
+    &.ng-enter-stagger {
+        -webkit-transition-delay: .12s;
+        transition-delay: .12s;
+    }
+
 }
 
 .appear-delayed {
