Add tests for the expanding and collapsing lists and fix a few issues:
- Filter dropdown is no longer hidden due to an overflow issue, but is displayed properly
- Overall collapsing and expanding of books using the filter collapse button works properly now
- The filter transitions for appearing are no longer overruled by background style transitions

--- a/app/sass/components/modules/top-filter.scss
+++ b/app/sass/components/modules/top-filter.scss
@@ -1,11 +1,11 @@
 .top-filter {
-    @include ellipsis;
     cursor: pointer;
     min-height: $header-height;
     max-height: $header-height;
     padding: 0 $section-list-side-padding;
     background: $section-header-bg-color;
     color: $section-header-color;
+    white-space: nowrap;
 
     &.active {
         background: $base-accent-color;
