--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,6 +1,12 @@
-<div ng-include="'views/runner/filter.html'" include-replace></div>
+<div class="top-filter ic appear-delayed ng-hide" ng-show="filter.loaded" ng-class="{'active':available.selectedItem === null}" ng-click="available.selectedItem = null" ng-controller="AvailableFilterCtrl as filter">
+    <i class="fa fa-bars" ng-click="available.toggleExpand('all')"></i>
+    <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET"></span>
+    <div class="select" filter-select="filter.sets" filter-id="available.setFilterId"></div>
+    <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG"></span>
+    <div class="select" filter-select="filter.tags" filter-id="available.tagFilterId"></div>
+</div>
 <ul class="main-content-list appear-delayed ng-hide" ng-show="available.storiesLoaded">
-    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in available.storybooks | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filterKeys.set | storybookTagFilter:available.filterKeys.tag">
+    <li class="ic cl list-animate" ng-animate="'animate'" ng-repeat="book in storybooks() | storybookSearchFilter:app.searchQuery | storybookSetFilter:available.filterKeys.set | storybookTagFilter:available.filterKeys.tag">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
             <span>{{ book.title }}</span>
@@ -11,7 +17,7 @@
                     <i class="fa fa-caret-right"></i>
                     <span>{{ story.title }}</span>
                 </div>
-                <ul ng-class="{'expand':story.expand === true || available.expand === 'book'+book.id || available.expand === 'all'}">
+                <ul ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}">
                     <li class="ic cl" ng-repeat="scenario in story.scenarios">
                         <div ng-class="{'active':available.selectedItem === 'scenario'+scenario.id}" ng-click="available.selectedItem = 'scenario'+scenario.id">
                             <span>{{ scenario.title }}</span>
