--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -171,7 +171,7 @@ input.ng-invalid {
     > li.cl > ul li.cl > ul {
         height: auto;
         max-height: 0;
-        @include transition(opacity $animate-std-cubic .4s, max-height linear .3s);
+        @include transition(opacity $animate-std-cubic .4s, max-height cubic-bezier(0, .6, .85, 1) .3s);
 
         &.expand {
             max-height: 1000px;
