Apply consistent sizing to list item height on lower levels to make room for buttons

--- a/app/sass/components/modules/content-list.scss
+++ b/app/sass/components/modules/content-list.scss
@@ -27,13 +27,21 @@
         padding-left: $section-list-icon-text-pad;
     }
 
+    li.cl > div {
+        min-height: $content-list-item-1-height;
+        max-height: $content-list-item-1-height;
+
+        > i {
+            top: $content-list-item-1-icon-top;
+            position: absolute;
+        }
+    }
+
     > li.cl {
         border-top: $content-list-bg-color $content-list-item-spacing solid;
         background: $content-list-bg-color;
 
         > div {
-            min-height: $content-list-item-1-height;
-            max-height: $content-list-item-1-height;
             background: $content-list-item-1-bg-color;
             margin-top: 0;
 
@@ -44,15 +52,13 @@
 
             > i {
                 left: $section-list-icon-left * $content-list-item-1-icon-left;
-                top: $content-list-item-1-icon-top;
                 font-size: $content-list-item-1-icon-size;
-                position: absolute;
             }
 
             > span {
-                padding: (($content-list-item-1-height - $content-list-item-1-font-size) / 4.5) 0;
                 font-size: $content-list-item-1-font-size;
                 line-height: $content-list-item-1-font-size;
+                padding: (($content-list-item-1-height - $content-list-item-1-font-size) / 4.5) 0;
             }
         }
 
@@ -62,8 +68,6 @@
                 background: $content-list-3-bg-color;
 
                 > div {
-                    min-height: $content-list-item-2-height;
-                    max-height: $content-list-item-2-height;
                     background: $content-list-item-2-bg-color;
 
                     &.active,
@@ -73,15 +77,13 @@
 
                     > i {
                         left: $section-list-icon-left * $content-list-item-2-icon-left;
-                        top: $content-list-item-2-icon-top;
                         font-size: $content-list-item-2-icon-size;
-                        position: absolute;
                     }
 
                     > span {
-                        padding: (($content-list-item-2-height - $content-list-item-2-font-size) / 3.5) 0;
                         font-size: $content-list-item-2-font-size;
                         line-height: $content-list-item-2-font-size;
+                        padding: (($content-list-item-1-height - $content-list-item-2-font-size) / 3) 0;
                     }
                 }
 
@@ -104,6 +106,10 @@
                         &:hover {
                             background: $base-accent-color;
                         }
+                    }
+
+                    li.cl:first-child > div {
+                        margin-top: 0;
                     }
                 }
             }
